# claude-legado

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
.claude/commands/: novel-add-source.md  novel-add.md  novel-info.md  novel-read.md  novel-search.md  novel-shelf.md  novel-sources.md  novel-toc.md  novel-use.md  novel.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-scaffold-display-state/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-rule-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md  (+1 more)
.planning/research/: BOOK_SOURCES.md  NOVEL_SOURCES.md  SKILL_SYSTEM.md  SUMMARY.md  TERMINAL_UI.md
src/novel/: __main__.py  commands.py  display.py  state.py
tests/: conftest.py  test_04_read_pipeline.py  test_commands.py  test_display.py  test_http_client.py  test_http_encoding.py  test_http_pagination.py  test_novel_use.py  test_rules_css.py  test_rules_evaluate.py  test_rules_js.py  test_rules_jsonpath.py  test_rules_regex.py  test_rules_skeleton.py  test_rules_xpath.py  test_source_parser.py  test_state.py
tests/fixtures/: book_info.json  book_source.json  html_title.html  toc_list.html
(+51 files in other folders)
